# booker-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Makefile.docker  Makefile.manage  Procfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
.circleci/: config.yml
.github/workflows/: build.yml  on-push.yml
booker/: asgi.py  settings.py  urls.py  wsgi.py
booker_api/: admin.py  apps.py  models.py  routers.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
booker_api/locale/pl/LC_MESSAGES/: django.mo  django.po
booker_api/migrations/: 0001_initial.py  0001_squashed_0002_user.py  0002_alter_stay_unique_together.py  0002_auto_20211223_0011.py  0002_user.py  0003_auto_20211208_2125.py  0003_auto_20220209_2141.py  0004_auto_20211208_2129.py  0005_delete_user.py
golden_view_wellness/: asgi.py  settings.py  urls.py  wsgi.py
golden_view_wellness_api/: admin.py  apps.py  models.py  routers.py  serializers.py  urls.py  viewsets.py
golden_view_wellness_api/migrations/: 0001_initial.py
operator_api/: admin.py  apps.py  models.py  routers.py  serializers.py  urls.py  views.py  viewsets.py
operator_api/locale/pl/LC_MESSAGES/: django.mo  django.po
operator_api/migrations/: 0001_initial.py  0002_auto_20220206_1545.py  0003_alter_user_apartments.py
tests/: conftest.py  constants.py  settings.py  test_booker.py  test_booking_view_set.py  test_golden_view_wellness_api.py  test_stay_model.py  test_stay_view_set.py  test_wellness_reservation_api.py
tests/test_booker_api/: test_booking_view_set.py  test_health.py  test_slot_view.py  test_utils.py
tests/test_operator_api/: test_apartment_view.py  test_apartment_view_set.py  test_booking_view_set.py  test_health_view.py  test_stay_view_set.py
