[tool.poetry]
name = "booker"
version = "0.1.0"
description = ""
authors = ["Przemysław Kaliś <przemek.kalis@gmail.com>"]
packages = [
    { include = "./manage.py" },
    { include = "booker" },
    { include = "booker_api" },
    { include = "operator_api" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-cors-headers = "^3.13.0"
django-environ = "^0.9.0"
djangorestframework = "^3.14.0"
drf-access-policy = "^1.3.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.2.0"
dj-database-url = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
doppler-env = "^0.3.0"
Faker = "^9.9.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest-django = "^4.5.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
